Change CSS containment should invalidate layout

This CL does two things:
1. Changing CSS contain property requires a full layout. We can potentially
   do more fine-grained invalidation, but containment changes are expected to
   be rare.

2. Amend positioned descendants list update code to mirror the behavior of
   LayoutObject::canContainFixedPositionObjects().

BUG=619864

Review-Url: https://codereview.chromium.org/2072473003
Cr-Commit-Position: refs/heads/master@{#400899}

Former-commit-id: 1201e5870ce0bcbb9e31518fcbc2ac2635d07187